brief text padding and hide br fixes  on mobile

--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ img {
     vertical-align: middle;
 }
 
-.brief-grid-col .-left {
+.brief-grid-col.-left {
     padding: 0 0 30px 0;
 }
 
@@ -108,6 +108,9 @@ h1 {
     .hero {
         min-height: 356px;
     }
+    .hero-text br {
+        display: none;
+    }
 }
 
 @media (min-width: 768px) {
@@ -139,6 +142,9 @@ h1 {
     }
     .brief-grid {
         display: flex;
+    }
+    .hero-text br {
+        display: block;
     }
 }
 
